# translate-kit

./: .gitignore  Package.swift  README.md  THIRD_PARTY_LICENSES.md  translate-test.html
.github/workflows/: ci.yml  release.yml
android/translate-kit/: build.gradle
android/translate-kit/src/main/java/io/github/marcosholgado/translatekit/: TranslateKit.kt
android/translate-kit/src/test/java/io/github/marcosholgado/translatekit/: TranslateKitGracefulDegradationTest.kt
apple/: Package.swift
apple/Sources/TranslateKit/: ModelSpec.swift  Results.swift  TranslateKit.swift  TranslateKitError.swift  TranslationModel.swift
apple/Tests/TranslateKitTests/: TranslateKitTests.swift
apple/cmodule/: module.modulemap
apple/smoke/: CMakeLists.txt  smoke.c
core/cmake/: BergamotEngine.cmake
core/src/: translator.cpp
core/test/: CMakeLists.txt  c_api_test.cpp  detect_cli.cpp  translate_cli.cpp
models/: README.md
scripts/: apply-engine-patches.sh  build-apple.sh  fetch-models.sh
